--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         },
       };
     </script>
-    <title>Document</title>
+    <title>e/m-Bestimmung nach Busch</title>
   </head>
   <body>
     <h1>e/m-Bestimmung</h1>
@@ -408,5 +408,88 @@
       ist nämlich nicht vollständig homogen und es muss mit einer „effektiven
       Windungszahl“ gerechnet werden.
     </p>
+    <h3>Literaturverzeichnis</h3>
+    <ul>
+      <li>
+        Anleitung zum Versuch. (kein Datum).
+        <i
+          >Die Bestimmung der spezifischen Ladung des Elektrons e/m nach der
+          Methode von Busch.</i
+        >
+        Phywe.
+      </li>
+      <li>
+        Breitsameter, J. (1972). <i>Lexikon der Schulphysik</i> (Bd. III). (O.
+        Höfling, Hrsg.) Köln: Aulis Verlag Deubner.
+      </li>
+      <li>
+        Busch, H. (18. Oktober 1926). Berechnung der Bahn von Kathodenstrahlen
+        im axialsymmetrischen elektormagnetischen Felde. (W. Wien, & M. Planck,
+        Hrsg.) <i>Annalen der Physik, 81.</i>
+      </li>
+      <li>
+        <i>Busch, Hans Walter Hugo.</i> (21. Oktober 2020). (Hessisches
+        Landesamt für geschichtliche Landeskunde) Abgerufen am 14. April 2021
+        von Hessische Biografie: https://www.lagis-hessen.de/pnd/117692670
+      </li>
+      <li>
+        Diehl, B., Erb, R., Heise, H., Kotthaus, U., Lindner, K., Schlichting,
+        H.-J., . . . Winter, R. (2008). <i>Physik Oberstufe</i> (1. Ausg.).
+        Berlin: Cornelsen Verlag.
+      </li>
+      <li>
+        Dorn, F., & Bader, F. (Hrsg.). (1976).
+        <i>Physik - Oberstufe (Bd. E).</i> Hannover: Schroedel.
+      </li>
+      <li>
+        <i>electron charge to mass quotient. </i> (31. Dezember 2018).
+        (CODATA-Datenbank) Abgerufen am 15. April 2021 von The NIST Reference on
+        Constants, Units, and Uncertainty:
+        https://physics.nist.gov/cgi-bin/cuu/Value?esme
+      </li>
+      <li>
+        Gobrecht, H., Bergmann, L., & Schaefer, C. (1971).
+        <i>Lehrbuch der Experimentalphysik</i> (6. Ausg., Bd. II). Berlin: De
+        Gruyter.
+      </li>
+      <li>
+        Kyberd, P. (11. Februar 2020).
+        <i
+          >How a ‘muon accelerator’ could unravel some of the universe’s
+          greatest mysteries.</i
+        >
+        Abgerufen am 24. April 2021 von The Conversation:
+        https://theconversation.com/how-a-muon-accelerator-could-unravel-some-of-the-universes-greatest-mysteries-131415
+      </li>
+      <li>
+        <i>National Institute of Standards and Technology.</i> (7. Januar 2021).
+        (U.S. Department of Commerce) Abgerufen am 15. April 2021 von SI Units -
+        Mass: https://www.nist.gov/pml/weights-and-measures/si-units-mass
+      </li>
+      <li>
+        Pischel, S. (21. Februar 2014).
+        <i>Bestimmung der Spezifischen Elektronenladung mit Radioröhren.</i>
+        Abgerufen am 17. April 2021 von Universität Bielefeld - Fakultät für
+        Physik:
+        https://www.physik.uni-bielefeld.de/didaktik/Examensarbeiten/Bachelorarbeit_MagischeAugen_SPischel.pdf
+      </li>
+      <li>
+        <i>proton charge to mass quotient.</i> (31. Dezember 2018).
+        (CODATA-Datenbank) Abgerufen am 23. April 2021 von The NIST Reference on
+        Constants, Units, and Uncertainty:
+        https://physics.nist.gov/cgi-bin/cuu/Value?esmp
+      </li>
+      <li>
+        <i>Versuchsanleitung Braun'sche Röhre.</i> (kein Datum). Abgerufen am
+        22. April 2021 von Cern Indico:
+        https://indico.cern.ch/event/72318/contributions/1242414/attachments/1037175/1478006/braunsche_roehre.pdf
+      </li>
+      <li>
+        Viefhaus, M., & Hanel, M. (kein Datum).
+        <i> Busch, Hans.</i> (Historischer Verein für Hessen e. V.) Abgerufen am
+        10. April 2021 von Stadtlexikon Darmstadt:
+        https://www.darmstadt-stadtlexikon.de/b/busch-hans.html
+      </li>
+    </ul>
   </body>
 </html>
