fixed m in first pargraph, enabled google search

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="a3YGSqg9hDVD-BQ0gQypkYwnRIY4-wEstGIzUxNfwHc"
+    />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script
       id="MathJax-script"
@@ -25,11 +29,11 @@
     <h3>Einleitung</h3>
     <p>
       Unter der spezifischen Ladung eines Elektrons versteht man in der Physik
-      das Verhältnis \(\frac{e}{m}\), wobei \(e\) die Elementarladung und m die
-      Masse des Elektrons ist. Die spezifische Ladung ist insofern interessant,
-      dass mit ihr und mit der Ladung eines Elektrons, die durch den
-      „Milikan-Versuch“ bestimmt werden kann, es möglich ist, die Masse eines
-      Elektrons zu berechnen. Außerdem war die Bestimmung der spezifischen
+      das Verhältnis \(\frac{e}{m}\), wobei \(e\) die Elementarladung und \(m\)
+      die Masse des Elektrons ist. Die spezifische Ladung ist insofern
+      interessant, dass mit ihr und mit der Ladung eines Elektrons, die durch
+      den „Milikan-Versuch“ bestimmt werden kann, es möglich ist, die Masse
+      eines Elektrons zu berechnen. Außerdem war die Bestimmung der spezifischen
       Ladung ein wichtiger Schritt bei der Entdeckung des Elektrons. Für die
       Bestimmung der spezifischen Ladung eines Elektrons gibt es verschiedene
       Vorgehensweisen. Eine davon ist die Methode des Physikers Hans Busch. Es
