--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="google-site-verification"
       content="a3YGSqg9hDVD-BQ0gQypkYwnRIY4-wEstGIzUxNfwHc"
     />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script
       id="MathJax-script"
@@ -24,43 +25,49 @@
     <title>e/m-Bestimmung nach Busch</title>
   </head>
   <body>
-    <h1>e/m-Bestimmung</h1>
-    <h2>nach Busch</h2>
-    <h3>Einleitung</h3>
-    <p>
-      Unter der spezifischen Ladung eines Elektrons versteht man in der Physik
-      das Verhältnis \(\frac{e}{m}\), wobei \(e\) die Elementarladung und \(m\)
-      die Masse des Elektrons ist. Die spezifische Ladung ist insofern
-      interessant, dass mit ihr und mit der Ladung eines Elektrons, die durch
-      den „Milikan-Versuch“ bestimmt werden kann, es möglich ist, die Masse
-      eines Elektrons zu berechnen. Außerdem war die Bestimmung der spezifischen
-      Ladung ein wichtiger Schritt bei der Entdeckung des Elektrons. Für die
-      Bestimmung der spezifischen Ladung eines Elektrons gibt es verschiedene
-      Vorgehensweisen. Eine davon ist die Methode des Physikers Hans Busch. Es
-      werden Elektronen innerhalb einer Braun’schen Röhre in ein homogenes
-      elektrisches Feld eines Plattenkondensators geschossen. Dieser lenkt die
-      Elektronen ab, sodass sie schräg in Richtung eines Leuchtschirmes fliegen.
-      Der gesamte Aufbau befindet sich innerhalb einer Spule, die ein Magnetfeld
-      erzeugt. Wenn die Elektronen nicht durch das elektrische Feld abgelenkt
-      würden, dann würde das Magnetfeld keinen Einfluss auf die Flugbahn der
-      Elektronen haben. Da allerdings die Elektronen zuerst durch den
-      Plattenkondensator, je nach Versuchsaufbau nach oben oder nach unten bzw.
-      nach rechts oder nach links abgelenkt werden, lässt sich die Flugbahn der
-      Elektronen in zwei unterschiedliche Komponenten unterteilen: Die Eine
-      parallel zum Boden in Richtung des Leuchtschirms und die Zweite senkrecht
-      zu den Feldlinien des Magnetfelds der Spule. Aus diesem Grund wirkt auf
-      das Elektron, bzw. nur auf die zur Spule senkrechte Komponente der
-      Bewegung die Lorentzkraft. Diese Kraft lenkt die Elektronen so ab, dass
-      eine Schraubenbahn entsteht. Diese Schraubenbahn setzt sich aus der
-      Kreisbewegung parallel zum Schirm, verursacht durch die Lorentzkraft und
-      aus der Vorwärtsbewegung in Richtung des Schirms, parallel zu der Richtung
-      der Feldlinien der Spule, zusammen. Das Ziel dieser Facharbeit ist es, die
-      Funktionsweise und den Aufbau des Versuches zu beschreiben und
-      experimentell durch Messungen die spezifische Ladung eines Elektrons zu
-      bestimmen. Außerdem werden in der Theorie auch Protonen und Myonen
-      betrachtet. Abschließend wird ein Vergleich zu der aus dem Unterricht
-      bekannten Methode mit dem Fadenstrahlrohr gezogen.
-    </p>
+    <div id="title">
+      <h1>e/m-Bestimmung</h1>
+      <h2>nach Busch</h2>
+    </div>
+    <section class="mainSection">
+      <h3>Einleitung</h3>
+      <p>
+        Unter der spezifischen Ladung eines Elektrons versteht man in der Physik
+        das Verhältnis \(\frac{e}{m}\), wobei \(e\) die Elementarladung und
+        \(m\) die Masse des Elektrons ist. Die spezifische Ladung ist insofern
+        interessant, dass mit ihr und mit der Ladung eines Elektrons, die durch
+        den „Milikan-Versuch“ bestimmt werden kann, es möglich ist, die Masse
+        eines Elektrons zu berechnen. Außerdem war die Bestimmung der
+        spezifischen Ladung ein wichtiger Schritt bei der Entdeckung des
+        Elektrons. Für die Bestimmung der spezifischen Ladung eines Elektrons
+        gibt es verschiedene Vorgehensweisen. Eine davon ist die Methode des
+        Physikers Hans Busch. Es werden Elektronen innerhalb einer Braun’schen
+        Röhre in ein homogenes elektrisches Feld eines Plattenkondensators
+        geschossen. Dieser lenkt die Elektronen ab, sodass sie schräg in
+        Richtung eines Leuchtschirmes fliegen. Der gesamte Aufbau befindet sich
+        innerhalb einer Spule, die ein Magnetfeld erzeugt. Wenn die Elektronen
+        nicht durch das elektrische Feld abgelenkt würden, dann würde das
+        Magnetfeld keinen Einfluss auf die Flugbahn der Elektronen haben. Da
+        allerdings die Elektronen zuerst durch den Plattenkondensator, je nach
+        Versuchsaufbau nach oben oder nach unten bzw. nach rechts oder nach
+        links abgelenkt werden, lässt sich die Flugbahn der Elektronen in zwei
+        unterschiedliche Komponenten unterteilen: Die Eine parallel zum Boden in
+        Richtung des Leuchtschirms und die Zweite senkrecht zu den Feldlinien
+        des Magnetfelds der Spule. Aus diesem Grund wirkt auf das Elektron, bzw.
+        nur auf die zur Spule senkrechte Komponente der Bewegung die
+        Lorentzkraft. Diese Kraft lenkt die Elektronen so ab, dass eine
+        Schraubenbahn entsteht. Diese Schraubenbahn setzt sich aus der
+        Kreisbewegung parallel zum Schirm, verursacht durch die Lorentzkraft und
+        aus der Vorwärtsbewegung in Richtung des Schirms, parallel zu der
+        Richtung der Feldlinien der Spule, zusammen. Das Ziel dieser Facharbeit
+        ist es, die Funktionsweise und den Aufbau des Versuches zu beschreiben
+        und experimentell durch Messungen die spezifische Ladung eines Elektrons
+        zu bestimmen. Außerdem werden in der Theorie auch Protonen und Myonen
+        betrachtet. Abschließend wird ein Vergleich zu der aus dem Unterricht
+        bekannten Methode mit dem Fadenstrahlrohr gezogen.
+      </p>
+    </section>
+
     <h3>1 Historie</h3>
     <h4>1.1 Person</h4>
     <p>
@@ -263,9 +270,9 @@
       Messbeispiel der Versuchsanleitung ist und Messreihe (B) die Daten der
       eigenen Messung beinhaltet:
     </p>
-    <ul>
-      <li>
-        <table>
+    <div id="tables">
+      <section id="first-table">
+        <table id="t1">
           <tr>
             <th>Messung Nr.</th>
             <th>Spannung \(U\) in V</th>
@@ -297,9 +304,9 @@
             <td>77,0</td>
           </tr>
         </table>
-        (A)
-      </li>
-      <li>
+        <b>(A)</b>
+      </section>
+      <section id="second-table">
         <table>
           <tr>
             <th>Messung Nr.</th>
@@ -322,11 +329,11 @@
             <td>740</td>
           </tr>
         </table>
-
-        (B)
+        <b>(B)</b>
         <p>Wie bereits oben erwähnt wurde die Spannung nicht gemessen.</p>
-      </li>
-    </ul>
+      </section>
+    </div>
+    <br />
     <h4>3.5 Deutung</h4>
     <p>
       Setzt man in die Gleichung \(\frac{e}{m}=\frac{8π²U_a}{B²I²}\) mit
