--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="a3YGSqg9hDVD-BQ0gQypkYwnRIY4-wEstGIzUxNfwHc"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script
       id="MathJax-script"
